# textbook-manager

./: Cargo.toml  LICENSE.md  README.md  scratch.md
src/: main.rs
