[package]
name = "tb-manager"
version = "0.1.0"
edition = "2024"
description = "A basic textbook manager"
readme = "README.md"
repository = "https://github.com/mvx-dev/textbook-manager"
license = "GPL-3.0-or-later"

[[bin]]
name = "tbm"
test = false
bench = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
skim = "4.8.0"
walkdir = "2.5.0"
